Add generated files for openapi
