# openapi/src/main/resources/openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 info:
-  description: Gives items pricing dynamically
+  description: Gives items pricing dynamically.
   title: DynamicPricing
-  version: v1
+  version: V1
 servers:
 - url: https://api.visionet.com
 paths:
@@ -12,15 +12,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/DiscountRequest'
+              $ref: '#/components/schemas/_dynamicPricing_post_request'
+        description: Input data required to calculate dynamic pricing
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DynamicPricingResponse'
-          description: Successful response
+                $ref: '#/components/schemas/_dynamicPricing_post_200_response'
+          description: Dynamic pricing result
       security:
       - ApiKeyAuth: []
       summary: Gets the price details
@@ -29,58 +30,52 @@ paths:
       - application/json
 components:
   schemas:
-    DiscountRequest:
-      example:
-        Discount:
-          sellingPrice: 0.8008281904610115
-          Product: Product
-          Margin: 6.027456183070403
-      properties:
-        Discount:
-          $ref: '#/components/schemas/DiscountRequest_Discount'
-      required:
-      - Discount
-      type: object
-    DynamicPricingResponse:
+    _dynamicPricing_post_200_response:
       example:
         Result:
           Reasoning: Reasoning
           SuggestedPrice: 0.8008281904610115
       properties:
         Result:
-          $ref: '#/components/schemas/DynamicPricingResponse_Result'
-      required:
-      - Result
+          $ref: '#/components/schemas/_dynamicPricing_post_200_response_Result'
       type: object
-    DiscountRequest_Discount:
-      example:
-        sellingPrice: 0.8008281904610115
-        Product: Product
-        Margin: 6.027456183070403
+    _dynamicPricing_post_request:
       properties:
-        sellingPrice:
-          type: number
-        Margin:
-          type: number
-        Product:
-          type: string
+        Discount:
+          $ref: '#/components/schemas/_dynamicPricing_post_request_Discount'
       required:
-      - Margin
-      - Product
-      - sellingPrice
+      - Discount
       type: object
-    DynamicPricingResponse_Result:
+    _dynamicPricing_post_200_response_Result:
       example:
         Reasoning: Reasoning
         SuggestedPrice: 0.8008281904610115
       properties:
         SuggestedPrice:
+          description: The suggested price for the product
           type: number
         Reasoning:
+          description: Explanation behind the suggested price
           type: string
       required:
       - Reasoning
       - SuggestedPrice
+      type: object
+    _dynamicPricing_post_request_Discount:
+      properties:
+        sellingPrice:
+          description: Selling price of the item
+          type: number
+        Margin:
+          description: Margin percentage for the item
+          type: number
+        Product:
+          description: Name of the product
+          type: string
+      required:
+      - Margin
+      - Product
+      - sellingPrice
       type: object
   securitySchemes:
     ApiKeyAuth:
